--- a/app/src/main/res/layout/activity_medicinelist.xml
+++ b/app/src/main/res/layout/activity_medicinelist.xml
@@ -39,5 +39,6 @@
         tools:listitem="@layout/item_medicine"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:overScrollMode="never"
-        android:clipToPadding="false"/>
+        android:clipToPadding="false"
+        android:paddingBottom="30dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
