modify into fragment

--- a/app/src/main/res/layout/activity_medicinelist.xml
+++ b/app/src/main/res/layout/activity_medicinelist.xml
@@ -31,6 +31,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        app:layout_constrainedHeight="true"
         android:id="@+id/rv_medicine_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
