--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
         android:id="@+id/et_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/light_gray"
         android:drawablePadding="13dp"
         android:paddingHorizontal="10dp"
@@ -32,16 +32,4 @@
         android:layout_marginEnd="10dp"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_constrainedHeight="true"
-        android:id="@+id/rv_medicine_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/et_search"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/item_medicine"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:overScrollMode="never"
-        android:clipToPadding="false"
-        android:paddingBottom="30dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
