--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#fbd14b</color>
+    <color name="colorPrimaryDark">#6a60a9</color>
+    <color name="colorAccent">#dedcee</color>
+    <color name="colorLight">#fffcf0</color>
     <color name="black">#000000</color>
     <color name="dark_gray">#757575</color>
     <color name="light_gray">#f5f5f5</color>
