--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,15 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16dp</item>
     </style>
+
+    <style name="hint_title" parent="Widget.AppCompat.TextView">
+        <item name="fontWeight">500</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textSize">16dp</item>
+    </style>
+    <style name="explain_text" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18dp</item>
+        <item name="fontWeight">500</item>
+    </style>
 </resources>
