--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -19,12 +19,12 @@
 
     <TextView
         android:id="@+id/tv_medicine_title"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:lineSpacingExtra="2dp"
-        android:maxLength="17"
         android:maxLines="1"
+        android:ellipsize="end"
         android:text="타이레놀"
         android:textFontWeight="700"
         style="@style/title_text"
