--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -8,19 +8,27 @@
     </style>
 
     <style name="title_text" parent="Widget.AppCompat.TextView">
-        <item name="fontWeight">700</item>
+        <item name="font">@font/nanum_square_b</item>
+        <item name="android:fontWeight">700</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16dp</item>
     </style>
 
     <style name="hint_title" parent="Widget.AppCompat.TextView">
         <item name="fontWeight">500</item>
+        <item name="font">@font/fontfamily</item>
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
     <style name="explain_text" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/black</item>
+        <item name="font">@font/fontfamily</item>
         <item name="android:textSize">18dp</item>
-        <item name="fontWeight">500</item>
+        <item name="fontWeight">300</item>
+    </style>
+    <style name="title_app" parent="Widget.AppCompat.TextView">
+        <item name="font">@font/fontfamily_title</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 </resources>
