--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="@string/title_favorites" />
+        android:title="@string/title_search" />
 
     <item
         android:id="@+id/navigation_setting"
