recyclerview scrol, main fragment, null image, alarm 하기 전

--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_search" />
 
     <item
-        android:id="@+id/navigation_setting"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/title_setting" />
+        android:id="@+id/navigation_alarm"
+        android:icon="@drawable/ic_baseline_alarm_24"
+        android:title="@string/title_alarm" />
 
 </menu>
