--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,18 +17,24 @@
     <style name="hint_title" parent="Widget.AppCompat.TextView">
         <item name="fontWeight">500</item>
         <item name="font">@font/fontfamily</item>
-        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">16dp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
     <style name="explain_text" parent="Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/dark_gray</item>
         <item name="font">@font/fontfamily</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">16dp</item>
         <item name="fontWeight">300</item>
     </style>
     <style name="title_app" parent="Widget.AppCompat.TextView">
         <item name="font">@font/fontfamily_title</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
+
 </resources>
