--- a/app/src/main/res/layout/activity_medicinelist.xml
+++ b/app/src/main/res/layout/activity_medicinelist.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -39,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/item_medicine"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:overScrollMode="never"
+        android:overScrollMode="always"
         android:clipToPadding="false"
         android:paddingBottom="30dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
