--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="알람 설정"
+        android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
