--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/et_search"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/light_gray"
         android:drawablePadding="13dp"
-        android:paddingHorizontal="10dp"
+        android:hint="어떤 약을 찾고 계세요?"
         android:inputType="text"
-        android:layout_width="match_parent"
-        android:hint="찾고싶은 약을 입력해주세요."
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_height="40dp"/>
+        android:paddingHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_search_button"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/icon_search"
-        app:layout_constraintTop_toTopOf="@id/et_search"
-        app:layout_constraintEnd_toEndOf="@id/et_search"
-        app:layout_constraintBottom_toBottomOf="@id/et_search"
         android:layout_marginEnd="10dp"
-        />
+        android:src="@drawable/icon_search"
+        app:layout_constraintBottom_toBottomOf="@id/et_search"
+        app:layout_constraintEnd_toEndOf="@id/et_search"
+        app:layout_constraintTop_toTopOf="@id/et_search" />
+
+    <TextView
+        android:id="@+id/home_ex"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+       android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="@+id/et_search"
+        android:text="MediWiki는 식약처 공공데이터를 활용하여 의약품 정보를 제공합니다."
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
